--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
+    "express-session": "^1.18.2",
+    "joi": "^18.0.1",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.2",
     "@types/node": "^24.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
