konsistensi gaya kode

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,7 +42,7 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
-    "esModuleInterop": true,
+    "esModuleInterop": true
   },
-   "include": ["src", "types"]
+  "include": ["src", "types"]
 }
