--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "joi": "^18.0.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "puppeteer": "^24.18.0",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
